--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,5 @@
 [build]
-  command = "CI=false npm run build"
+  command = "npm install --legacy-peer-deps && npm run build"
 
 [build.environment]
   NODE_VERSION = "16"
-  NPM_FLAGS = "--no-audit --no-fund"
